# task-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.development.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  redeploy.sh
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  tasks.py  users.py
app/core/: config.py  logging.py  security.py  swagger.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 1c374c6847ce_init.py  571fea4eb2b9_add_default_admin_user.py  653730bda487_add_refresh_token_table.py
app/middleware/: logging_middleware.py
app/models/: refresh_token.py  task.py  user.py
app/repositories/: base_repository.py  refresh_token_repository.py  task_repository.py  user_repository.py
app/schemas/: auth.py  task.py  user.py
app/services/: admin_service.py  auth_service.py  task_service.py
tests/: conftest.py
tests/integration/: test_admin.py  test_auth.py  test_tasks.py  test_users.py
tests/unit/: test_auth_service.py  test_dummy.py  test_security.py  test_task_service.py
