[tool.poetry]
package-mode = false
name = "task-api"
version = "0.1.0"
description = "Task Management REST API"
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic-settings = "^2.3"
python-jose = {extras = ["cryptography"], version = "^3.3"}
slowapi = "^0.1.9"
structlog = "^24.1"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.13.3"}
bcrypt = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"
pytest-cov = "^5.0"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


